--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,3 @@
-.box-sizing-reset {
-    /* apply sensible box-sizing to all elements */
-}
-
 * {
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
@@ -42,9 +38,51 @@ p {
     margin: 0%;
     color: black;
     font-style: normal;
-    padding: 2px 0;
+    padding: 4px 0;
+}
+ul {
+    margin: 10px 0;
+    padding-left: 30px;
 }
 
+li {
+    margin: 5px 0;
+    color: black;
+}
 .blue {
     color: rgb(23, 162, 218);
+}
+
+footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    margin-top: 30px;
+    padding-top: 20px;
+    border-top: 1px solid #ccc;
+}
+
+footer li {
+    list-style: none;
+}
+
+footer a {
+    color: black;
+    text-decoration: none;
+    font-size: 24px;
+    transition: all 0.3s ease;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: #f0f0f0;
+}
+
+footer a:hover {
+    background-color: #17a2da;
+    color: white;
+    transform: scale(1.1);
 }
